version bump 2.0.0
Added jakarta validation and also added feature to generate API code and models using openapi-generator-maven-plugin
